--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"coverage": "vitest run --coverage",
 		"prepare": "husky install",
 		"husky": "npx husky add .husky/commit-msg 'npx --no -- commitlint --edit ${1}'",
-		"release": "standard-version"
+		"release": "release-it"
 	},
 	"proxy": "http://localhost:5000/",
 	"dependencies": {
@@ -58,6 +58,7 @@
 		"node-sass": "^8.0.0",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.0",
+		"release-it": "^15.6.0",
 		"sass": "^1.56.1",
 		"standard-version": "^9.5.0",
 		"tailwindcss": "^3.2.4",
