--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,11 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"noEmitOnError": false,
+		"noUnusedLocals": false
 	},
 	"include": ["src"],
+	"exclude": ["node_modules"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
