--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@commitlint/cli": "^17.3.0",
 		"@commitlint/config-conventional": "^17.3.0",
 		"@faker-js/faker": "^7.6.0",
+		"@release-it/conventional-changelog": "^5.1.1",
 		"@types/react": "^18.0.24",
 		"@types/react-dom": "^18.0.8",
 		"@vitejs/plugin-react": "^2.2.0",
