--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
 		"@types/styled-components": "^5.1.26",
 		"array-move": "^4.0.0",
 		"axios": "^1.2.0",
+		"chart.js": "^4.1.1",
 		"formik": "^2.2.9",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.1.0",
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^14.2.3",
 		"react-helmet-async": "^1.3.0",
