--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"array-move": "^4.0.0",
 		"axios": "^1.2.0",
 		"chart.js": "^4.1.1",
+		"faker": "^6.6.6",
 		"formik": "^2.2.9",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.1.0",
