docs: :package: added rxjs

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"react-toastify": "^9.1.1",
 		"redux-thunk": "^2.4.2",
 		"rsuite": "^5.23.0",
+		"rxjs": "^7.8.0",
 		"sanitize-html-react": "^1.13.0",
 		"styled-components": "^5.3.6",
 		"vite-plugin-require": "^1.1.10",
